kubernetes-security/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controllers-pod
  namespace: homework
  labels:
    app: webapp
spec:
  selector:
    matchLabels:
      app: webapp
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webapp
    spec:
      serviceAccountName: monitoring
      nodeSelector:
        homework: "true"
      dnsPolicy: Default
      containers:
      - name: nginx-container 
        image: nginx:stable
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: intro-workdir
          mountPath: /usr/share/nginx/html
        - name: conf-volume
          mountPath: /usr/share/nginx/html/conf
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh","-c","rm /homework/index.html"]
        readinessProbe:
          httpGet:
            path: /index.html
            port: 80
      volumes:
      - name: intro-workdir
        persistentVolumeClaim:
          claimName: pvchw4
      - name: conf-volume
        configMap:
          name: cmhw4
