kubernetes-security/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /homepage
        pathType: Exact
        backend:
          service:
            name: webapp-service
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 8000
